tests/NormalTests/paczka1/fuzzy1/20308727.err
Error in line 17: 7ojzq6z A972 5,4
Error in line 27: Eecw4K96W ³890 53,4
Error in line 18: A328 A328 87,0
Error in line 37: A328 S890 !6,!
Error in line 31: tsZUlar18t A972 109,2
